--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "your-app-name",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "try.js"
+  }
+}
+{
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
