Fix package.json and sqecify Node.js version

--- a/backend1/package.json
+++ b/backend1/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "your-app-name",
+  "name": "website-backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "try.js"
+    "start": "node try.js"
   },
 "engines": {
      "node": "18.x" 
 },
 
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.15.0",
+    "express": "^4.1.0",
+    "mongoose": "^8.1.0",
     "some-module": "^0.0.3",
     "xlsx": "^0.18.5"
   }
