--- a/backend1/package.json
+++ b/backend1/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "helmet": "^7.1.0"
 
   }
 }
