--- a/backend1/package.json
+++ b/backend1/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "mongoose": "^8.1.0",
     "nodemailer": "^7.0.3",
     "helmet": "^7.1.0"
