--- a/backend1/package.json
+++ b/backend1/package.json
@@ -16,7 +16,8 @@
     "express-rate-limit": "^7.1.5",
     "mongoose": "^8.1.0",
     "nodemailer": "^7.0.3",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "dotenv": "^16.4.5"
 
   }
 }
